--- a/res/layout/pull_to_refresh_swipe_list_single_list.xml
+++ b/res/layout/pull_to_refresh_swipe_list_single_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
@@ -32,4 +32,5 @@
         </FrameLayout>
     </android.support.v4.widget.SwipeRefreshLayout>
 
-</LinearLayout>
+ <include layout="@layout/pull_to_refresh_empty" />
+</RelativeLayout>
