--- a/res/layout/groups_detail.xml
+++ b/res/layout/groups_detail.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <LinearLayout
+ <!--    <LinearLayout
         android:id="@+id/buttons"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -18,7 +18,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="Accept Task" />
-    </LinearLayout>
+    </LinearLayout>-->
 
     <ScrollView
         android:id="@+id/scroll_frame"
@@ -44,7 +44,7 @@
                 <TextView
                     android:id="@+id/group_title"
                     style="@style/form_description"
-                    android:layout_below="@+id/needs_details_title_label"
+                    android:layout_below="@+id/group_title_label"
                     android:text="title_info" />
             </RelativeLayout>
 
@@ -172,13 +172,13 @@
                 android:orientation="horizontal" >
 
                 <TextView
-                    android:id="@+id/needs_details_location_label"
+                    android:id="@+id/groups_details_location_label"
                     style="@style/form_label"
                     android:layout_marginRight="5dp"
                     android:text="@+string/location" />
 
                 <TextView
-                    android:id="@+id/needs_details_location"
+                    android:id="@+id/groups_details_location"
                     style="@style/form_description"
                     android:text="" />
             </LinearLayout>
