--- a/res/layout/create_need_1.xml
+++ b/res/layout/create_need_1.xml
@@ -20,11 +20,11 @@
         android:singleLine="true" />
     <!-- WHERE -->
 
-    <include layout="@layout/online_inperson_switch" />
-
-    <include layout="@layout/private_public_switch" />
-
     <include layout="@layout/location_layout" />
+
+    <include layout="@layout/time_layout" />
+
+    <include layout="@layout/price_layout" />
 
     <include layout="@layout/category_layout" />
 
