--- a/res/layout/needs_details.xml
+++ b/res/layout/needs_details.xml
@@ -17,6 +17,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="Accept Task"
+            android:onClick="acceptNeedPurchase"
             style="@style/ButtonBottom" />
     </LinearLayout>
 
