--- a/res/layout/submit_for_review_layout.xml
+++ b/res/layout/submit_for_review_layout.xml
@@ -29,6 +29,51 @@
 
             <include layout="@layout/description_layout" />
 
+    <TextView
+        android:id="@+id/quality_label"
+        style="@style/TextAppearance.EditEvent_LabelSmall"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Quality Rating" />
+            <RatingBar
+                android:id="@+id/quality"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:numStars="5"
+                android:rating="5.0"
+                android:stepSize="1.0" />
+
+    <TextView
+        android:id="@+id/effort_label"
+        style="@style/TextAppearance.EditEvent_LabelSmall"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Effort Rating" />
+            <RatingBar
+                android:id="@+id/effort"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:numStars="5"
+                android:rating="5.0"
+                android:stepSize="1.0" />
+
+    <TextView
+        android:id="@+id/timeliness_label"
+        style="@style/TextAppearance.EditEvent_LabelSmall"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Timeliness Rating" />
+            <RatingBar
+                android:id="@+id/timeliness"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:numStars="5"
+                android:rating="5.0"
+                android:stepSize="1.0" />
+
             <View style="@style/EditEventSeparator" />
         </LinearLayout>
     </ScrollView>
