--- a/res/layout/review_item.xml
+++ b/res/layout/review_item.xml
@@ -14,42 +14,59 @@
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="fill_parent"
-            android:layout_gravity="left"
-            android:layout_weight="1"
-            android:orientation="horizontal" >
-
-            <TextView
-                android:id="@+id/review"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="sender"
-                android:textColor="@color/black"
-                android:textSize="16sp" >
-            </TextView>
-
-            <com.github.curioustechizen.ago.RelativeTimeTextView
-                android:id="@+id/time_ago"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:gravity="right"
-                android:text="date"
-                android:textColor="@color/black"
-                android:textSize="14sp" />
-        </RelativeLayout>
+        <TextView
+            android:id="@+id/timeliness"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Timeliness"
+            android:textColor="@color/black"
+            android:textSize="16sp" >
+        </TextView>
 
         <RatingBar
-            android:id="@+id/ratingBar"
+            android:id="@+id/timeliness_ratingBar"
+            style="?android:attr/ratingBarStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:isIndicator="true"
             android:numStars="5" />
 
         <TextView
-            android:id="@+id/rating_author"
+            android:id="@+id/effort"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Effort"
+            android:textColor="@color/black"
+            android:textSize="16sp" >
+        </TextView>
+
+        <RatingBar
+            android:id="@+id/effort_ratingBar"
+            style="?android:attr/ratingBarStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:isIndicator="true"
+            android:numStars="5" />
+
+        <TextView
+            android:id="@+id/Quality"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Quality"
+            android:textColor="@color/black"
+            android:textSize="16sp" >
+        </TextView>
+
+        <RatingBar
+            android:id="@+id/quality_ratingBar"
+            style="?android:attr/ratingBarStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:isIndicator="true"
+            android:numStars="5" />
+
+        <TextView
+            android:id="@+id/message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
