--- a/res/layout/events_details.xml
+++ b/res/layout/events_details.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <LinearLayout
+   <!--  <LinearLayout
         android:id="@+id/buttons"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -18,7 +18,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="Accept Task" />
-    </LinearLayout>
+    </LinearLayout>-->
 
     <ScrollView
         android:id="@+id/scroll_frame"
