--- a/res/layout/actionbar_searchbar.xml
+++ b/res/layout/actionbar_searchbar.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="64dip"
     android:gravity="left|center_vertical"
     android:orientation="horizontal" >
 
@@ -30,8 +30,8 @@
       >
 
         <ImageButton
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="64dip"
+            android:layout_height="64dip"
             android:layout_alignParentRight="true"
             android:layout_gravity="center"
             android:layout_marginBottom="4dip"
