--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -266,4 +266,66 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="formFieldLabel">
+        <item name="android:paddingRight">10dip</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="formFieldLabel">
+        <item name="android:paddingRight">10dip</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="formField">
+        <item name="android:layout_width">0dip</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+    </style>
+
+    <style name="searchFormField">
+        <item name="android:layout_width">0dip</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+    </style>
+
+    <style name="formField.text">
+        <item name="android:background">@drawable/login_group_row</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:maxLength">50</item>
+        <item name="android:padding">5dip</item>
+        <item name="android:textSize">20dip</item>
+    </style>
+
+    <style name="formField.multiLine">
+        <item name="android:background">@drawable/login_group_row</item>
+        <item name="android:singleLine">false</item>
+        <item name="android:maxLength">255</item>
+        <item name="android:padding">5dip</item>
+        <item name="android:textSize">20dip</item>
+    </style>
+
+    <style name="formField.text.password">
+        <item name="android:background">@drawable/login_group_row</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:maxLength">50</item>
+        <item name="android:password">true</item>
+        <item name="android:padding">5dip</item>
+        <item name="android:textSize">20dip</item>
+    </style>
+
+    <!-- SEARCH -->
+    <style name="searchFormField.text">
+        <item name="android:singleLine">true</item>
+        <item name="android:maxLength">50</item>
+        <item name="android:padding">5dip</item>
+        <item name="android:background">#00000000</item>
+        <item name="android:textSize">20dip</item>
+    </style>
+
+    <style name="formFieldLabel.searchFormtitle">
+        <item name="android:textStyle">bold</item>
+        <item name="android:padding">5dip</item>
+        <item name="android:textSize">20dip</item>
+        <item name="android:background">#00000000</item>
+    </style>
 </resources>
